# gomoku

./: index.html  readme.md
.github/workflows/: deploy.yml
assets/: index-DYCYUMSs.js
back/: Cargo.toml  Makefile  deploy.bash
back/gomoku-api/: Cargo.toml  Settings.toml  run.sh
back/gomoku-api/src/: constant.rs  error.rs  lib.rs  main.rs
back/gomoku-api/src/app/: mod.rs
back/gomoku-api/src/config/: app_config.rs  app_state.rs
back/gomoku-api/src/controller/: auth.rs  mod.rs  openapi.rs  room.rs  test.rs  user.rs  ws.rs
back/gomoku-api/src/dto/request/: auth.rs  mod.rs  room.rs  ws.rs
back/gomoku-api/src/dto/response/: auth.rs  mod.rs  room.rs
back/gomoku-api/src/model/: jwt_claim.rs  mod.rs  oauth2.rs  pagination.rs
back/gomoku-api/src/pipe/: mod.rs
back/gomoku-api/src/pipe/extractor/: auth_guard.rs
back/gomoku-api/src/pipe/into_response/: error.rs
back/gomoku-api/src/service/: auth.rs  room.rs  ws.rs
back/gomoku-api/src/util/: aes.rs  config.rs  cookie.rs  dynamo.rs  hash.rs  jwt.rs  mod.rs
back/gomoku-lib/: Cargo.toml
back/gomoku-lib/src/: lib.rs
back/gomoku-lib/src/config/: mod.rs
back/gomoku-lib/src/service/: mod.rs
back/gomoku-lib/src/util/: dynamo.rs
back/gomoku-q/: Cargo.toml
back/gomoku-q/src/: main.rs
back/gomoku-ws/: Cargo.toml  Settings.toml
back/gomoku-ws/src/: lib.rs  main.rs
back/gomoku-ws/src/app/: mod.rs
back/gomoku-ws/src/config/: mod.rs
back/gomoku-ws/src/handler/: connect.rs  default.rs  disconnect.rs  echo.rs  mod.rs  room.rs  topic.rs
back/gomoku-ws/src/message/: request.rs  response.rs
back/gomoku-ws/src/repository/: mod.rs
back/gomoku-ws/src/util/: dynamo.rs  mod.rs
front/: .env  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
front-regacy/: .env  .env.production  package-lock.json  package.json  vite.config.ts
front-regacy/src/layout/: DefaultLayout.tsx
front-regacy/src/page/: Home.tsx
front/src/: App.tsx  actions.ts  main.tsx  middleware.ts
front/src/app/: layout.tsx  page.tsx
front/src/app/api/channelroom/: route.ts
front/src/app/api/test/: route.ts
front/src/app/api/ws/token/: route.ts
front/src/app/channel/[channelId]/room/[roomId]/: page.tsx
front/src/app/channel/[channel]/room/[roomNum]/: page.tsx
front/src/component/: GomokuTable.tsx  Room.tsx  SignupGuest.tsx  Ws.tsx
front/src/layout/: DefaultLayout.tsx
front/src/page/: Home.tsx  Room.tsx
front/src/page/test/: Test.tsx  TestChat.tsx
front/src/store/: store.ts
