[package]
name = "gomoku-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43" }
lambda_http = { version = "0.14" }
aws-config = { version = "1.1", features = ["behavior-version-latest"] }
aws-sdk-apigatewaymanagement = { version = "1.57" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }

axum = { version = "0.8" }
axum-extra = { version = "0.10.0", features = ["cookie", "typed-header"] }
tower-http = { version = "0.6.2", features = ["full"] }
