[package]
name = "gomoku-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43" }
lambda_http = { version = "0.14" }
aws-config = { version = "1.1", features = ["behavior-version-latest"] }
aws-sdk-apigatewaymanagement = { version = "1.57" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }

aws-sdk-dynamodb = "1.64.0"

axum = { version = "0.8" }
axum-extra = { version = "0.10.0", features = ["cookie", "typed-header"] }
hyper = "1.5.2"
tower-http = { version = "0.6.2", features = ["full"] }
config = "0.15.7"

nanoid = "0.4.0"
rand = "0.8.5"

# open api
utoipa = { version = "5.3.1", features = [
    "axum_extras",
    "chrono",
], default-features = false }
utoipa-swagger-ui = { version = "9.0.0", features = [
    "axum",
], default-features = false }

# error
thiserror = "2.0.11"
anyhow = "1.0.95"

# time
time = "0.3.37"
chrono = { version = "0.4.39", features = ["serde"] }

# validation
validator = { version = "0.19.0", features = [
    "derive",
], default-features = false }
regex = { version = "1.11.1", default-features = false }

# auth
jsonwebtoken = "9.3.0"
argon2 = "0.5.3"
sha2 = "0.10.8"
hex = "0.4.3"
oauth2 = { version = "4.4.2" }
