[package]
name = "gomoku-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43" }
# aws-config = { version = "1.1", features = ["behavior-version-latest"] }
aws-sdk-apigatewaymanagement = { version = "1.57" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }

# reqwest = { version = "0.12", features = ["json", "native-tls-vendored"] }
anyhow = "1"
# config = "0.15"
aws-sdk-dynamodb = "1.64.0"
futures = "0.3.31"
# time
time = "0.3.37"
chrono = { version = "0.4.39", features = ["serde"] }
aws-sdk-sqs = "1.59.0"
tracing = "0.1.41"
