[package]
name = "gomoku-q"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43" }
# lambda_http = { version = "0.14" }
aws-config = { version = "1.1", features = ["behavior-version-latest"] }
aws-sdk-apigatewaymanagement = { version = "1.57" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
lambda_runtime = "0.13.0"
aws_lambda_events = "0.16.0"
